--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -45,6 +45,9 @@
                         }
                         
                         <a class="texto-cabecera menu-dropdown-item" asp-page="/HistoricalLow">Historical Lows</a>
+                        <hr>
+                        <a class="texto-cabecera menu-dropdown-item" asp-page="/Subscriptions">Subscriptions</a>
+                        <hr>
                         <a class="texto-cabecera menu-dropdown-item" asp-page="/LastAdded">Last Added</a>
                     </div>
                 </div>
