--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -74,6 +74,7 @@
                                             <a class="texto-cabecera menu-dropdown-item" asp-page="/Admin/Tiendas">Tiendas</a>
                                             <a class="texto-cabecera menu-dropdown-item" asp-page="/Admin/Pendientes">Pendientes</a>
                                             <hr>
+                                            <a class="texto-cabecera menu-dropdown-item" asp-page="/Admin/Noticias">Noticias</a>
                                             <a class="texto-cabecera menu-dropdown-item" asp-page="/Admin/Suscripciones">Suscripciones</a>
                                         </div>
                                     </div>
