--- a/pepeizqs deals web/Pages/Subscriptions.cshtml
+++ b/pepeizqs deals web/Pages/Subscriptions.cshtml
@@ -6,4 +6,4 @@
 	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.Suscripciones2>(RenderMode.ServerPrerendered))
+@(await Html.RenderComponentAsync<Componentes.Secciones.Suscripciones>(RenderMode.ServerPrerendered))
