--- a/pepeizqs deals web/Pages/Componentes/Portada/UltimosMinimos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Portada/UltimosMinimos.razor
@@ -23,7 +23,7 @@
 						</div>
 
 						<div style="width: 5%; height: 16px; position: relative;">
-							<img src="@Herramientas.JuegoFicha.IconoTiendaMinimoActualEntreTodosDRMs(juego)" class="juego-icono-tienda"/>
+							<img src="@CargarIconoTienda(juego)" class="juego-icono-tienda" />
 						</div>
 
 						<div style="width: 15%; padding: 4px 15px 4px 0px; font-size: 13px; text-align: right;">
@@ -42,96 +42,41 @@
 
 @code {
 
+	#nullable disable
+
 	List<Juego> juegosMostrar = new List<Juego>();
 
 	protected override void OnInitialized()
 	{
-		SqlConnection conexion = Herramientas.BaseDatos.Conectar();
+		List<Juego> juegosConMinimos = BaseDatos.Juegos.Precios.DevolverMinimos();
 
-		using (conexion)
+		if (juegosConMinimos != null)
 		{
-			conexion.Open();
-
-			List<Juego> juegos = Buscar.Todos(conexion);
-
-			if (juegos.Count > 0)
+			if (juegosConMinimos.Count > 0)
 			{
-				List<Juego> juegosConMinimos = new List<Juego>();
+				juegosMostrar.Clear();
 
-				foreach (var juego in juegos)
+				for (int i = 0; i < 10; i += 1)
 				{
-					if (juego.PrecioMinimosHistoricos.Count > 0)
-					{
-						foreach (var minimo in juego.PrecioMinimosHistoricos)
-						{
-							bool fechaEncaja = Herramientas.JuegoFicha.CalcularAntiguedad(minimo);
-
-							if (fechaEncaja == true && minimo.Descuento > 0)
-							{
-								juegosConMinimos.Add(juego);
-								break;
-							}
-						}
-					}
-				}
-
-				juegosConMinimos.Sort(delegate (Juego j1, Juego j2)
-				{
-					List<JuegoPrecio> j1Ofertas = new List<JuegoPrecio>();
-
-					if (j1.PrecioMinimosHistoricos.Count > 0)
-					{
-						foreach (var j in j1.PrecioMinimosHistoricos)
-						{
-							j1Ofertas.Add(j);
-						}
-
-						j1Ofertas.OrderBy(x => x.FechaDetectado);
-					}
-
-					List<JuegoPrecio> j2Ofertas = new List<JuegoPrecio>();
-
-					if (j2.PrecioMinimosHistoricos.Count > 0)
-					{
-						foreach (var j in j2.PrecioMinimosHistoricos)
-						{
-							j2Ofertas.Add(j);
-						}
-
-						j2Ofertas.OrderBy(x => x.FechaDetectado);
-					}
-
-					if (j1Ofertas.Count > 0 && j2Ofertas.Count > 0)
-					{
-						return j2Ofertas[0].FechaDetectado.CompareTo(j1Ofertas[0].FechaDetectado);
-					}
-					else
-					{
-						if (j1Ofertas.Count == 0 && j2Ofertas.Count > 0)
-						{
-							return 1;
-						}
-						else if (j1Ofertas.Count > 0 && j2Ofertas.Count == 0)
-						{
-							return -1;
-						}
-					}
-
-					return 0;
-				});
-
-				int i = 0;
-				foreach (var juego in juegosConMinimos)
-				{
-					if (i < 10)
-					{
-						juegosMostrar.Add(juego);
-					}
-
-					i += 1;
+					juegosMostrar.Add(juegosConMinimos[i]);
 				}
 			}
 		}
 	}
 
+	private string CargarIconoTienda(Juego juego)
+	{
+		JuegoPrecio oferta = juego.PrecioMinimosHistoricos[0];
+		List<Tiendas2.Tienda> tiendas = Tiendas2.TiendasCargar.GenerarListado();
+
+		foreach (var tienda in tiendas)
+		{
+			if (tienda.Id == oferta.Tienda)
+			{
+				return tienda.ImagenIcono;
+			}
+		}
+
+		return null;
+	}
 }
