--- a/pepeizqs deals web/Pages/Game.cshtml
+++ b/pepeizqs deals web/Pages/Game.cshtml
@@ -65,7 +65,7 @@
 
 						@if (Model.juego.IdSteam > 0)
 						{
-							<a class="juego-boton-pequeño" style="margin-left: 10px;" href="@Herramientas.EnlaceAcortador.Generar("https://store.steampowered.com/app/" + Model.juego.IdSteam.ToString(), "steam")" target="_blank">View on Steam</a>
+							<input type="button" value="View on Steam" class="juego-boton-pequeño" style="margin-left: 10px;" onclick="window.open('@Herramientas.EnlaceAcortador.Generar("https://store.steampowered.com/app/" + Model.juego.IdSteam.ToString(), "steam")', '_blank')" target="_blank" />
 						}	
 					</div>
 				</div>
@@ -98,7 +98,7 @@
 			</div>
         </div>   
 
-		<div style="display: flex; flex-flow: column wrap;position: fixed; z-index: 0; margin-top: -40px; width: 100%; left: 0; top: 45%;">
+		<div style="display: flex; flex-flow: column wrap; position: fixed; z-index: 0; margin-top: -40px; width: 100%; left: 0; top: 45%;">
 			@foreach (JuegoDRM drm in JuegoDRM2.CargarDRMs())
 			{
 				@if (drm != JuegoDRM.NoEspecificado)
