--- a/pepeizqs deals web/Pages/Shared/_LoginPartial.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_LoginPartial.cshtml
@@ -4,7 +4,7 @@
 @inject SignInManager<Usuario> SignInManager
 @inject UserManager<Usuario> UserManager
 
-<ul class="navbar-nav">
+<ul class="navbar-nav" style="margin-top: 0px;">
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
