--- a/pepeizqs deals web/Pages/LastNews.cshtml
+++ b/pepeizqs deals web/Pages/LastNews.cshtml
@@ -6,4 +6,4 @@
 	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.UltimasNoticias2>(RenderMode.ServerPrerendered))
+@(await Html.RenderComponentAsync<Componentes.Secciones.UltimasNoticias>(RenderMode.ServerPrerendered))
