--- a/pepeizqs deals web/wwwroot/css/resto.css
+++ b/pepeizqs deals web/wwwroot/css/resto.css
@@ -580,7 +580,7 @@ select {
     border: 0px;
     box-shadow: none;
     flex: 1;
-    padding: 0 1em;
+    padding: 10px 15px;
     color: var(--colorTexto);
     background-color: var(--fondoEntrada);
     font-family: 'Motiva Sans';
