--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -114,41 +114,9 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
-    <script src="_framework/blazor.server.js" autostart="false"></script>
-    <script>
-        Blazor.start().then(() => {
-            Blazor.defaultReconnectionHandler._reconnectCallback = function (d) {
-                document.getElementById('components-reconnect-modal').style.display = 'none';
-                document.location.reload();
-            }
-        });
-    </script>
+    <script src="_framework/blazor.server.js"></script>
 
-    <script>
-        // window.onload = function () {
-        //     const c = document.getElementById('components-reconnect-modal');
-        //     c.style.display = 'none';
-        // }
-        $(document).ready(function () {
-            if ($('.components-reconnect-modal').is(':visible')) {
-                $('.components-reconnect-modal').hide();
-            }
-        });
-    </script>
-
-@*     <script src="_framework/blazor.server.js" autostart="false"></script>
-    <script>
-        Blazor.start({
-            configureSignalR: function (builder) {
-                let c = builder.build();
-                c.serverTimeoutInMilliseconds = 3000000;
-                c.keepAliveIntervalInMilliseconds = 1500000;
-                builder.build = () => {
-                    return c;
-                };
-            }
-        });
-    </script> *@
+    <div id="components-reconnect-modal" style="display: none"/>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
