--- a/pepeizqs deals web/Pages/Componentes/Secciones/UltimasNoticias.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/UltimasNoticias.razor
@@ -12,9 +12,9 @@
 		}
 
 		<div class="perfil" style="margin-left: 150px; margin-bottom: 130px; margin-top: -100px;">
-			<div style="font-size: 20px; margin-bottom: 15px;">@noticiasMostrar[i].Titulo</div>
+			<div style="font-size: 20px; margin-bottom: 15px;">@noticiasMostrar[i].TituloEn</div>
 
-			<div>@((MarkupString)@noticiasMostrar[i].Contenido)</div>
+			<div>@((MarkupString)@noticiasMostrar[i].ContenidoEn)</div>
 		</div>	
 	}
 }
