--- a/pepeizqs deals web/Pages/Componentes/Admin/Noticias.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Noticias.razor
@@ -56,13 +56,23 @@
 			</div>
 
 			<div style="margin-top: 20px;">
-				<label>Título:</label>
-				<input type="text" class="entrada-texto" value="@titulo" />
+				<label>Título EN:</label>
+				<input type="text" class="entrada-texto" value="@tituloEn" />
 			</div>
 
 			<div style="margin-top: 20px;">
-				<label>Contenido:</label>
-				<textarea class="entrada-texto" rows="8">@contenido</textarea>
+				<label>Título ES:</label>
+				<input type="text" class="entrada-texto" value="@tituloEs" />
+			</div>
+
+			<div style="margin-top: 20px;">
+				<label>Contenido EN:</label>
+				<textarea class="entrada-texto" rows="8">@contenidoEn</textarea>
+			</div>
+
+			<div style="margin-top: 20px;">
+				<label>Contenido ES:</label>
+				<textarea class="entrada-texto" rows="8">@contenidoEs</textarea>
 			</div>
 
 			<div style="margin-top: 20px;">
@@ -88,8 +98,11 @@
 
 	private string suscripcionSeleccionada = null;
 
-	private string titulo = null;
-	private string contenido = null;
+	private string tituloEn = null;
+	private string tituloEs = null;
+	private string contenidoEn = null;
+	private string contenidoEs = null;
+
 	private string fechaSeleccionada = null;
 
 	private void CambiarNoticiaTipo(ChangeEventArgs texto)
@@ -160,26 +173,33 @@
 
 		if (lista != null)
 		{
-			titulo = Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(suscripcionSeleccionada).Nombre + " • ";
+			tituloEn = Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(suscripcionSeleccionada).Nombre + " • ";
+			tituloEs = Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(suscripcionSeleccionada).Nombre + " • ";
 
 			if (lista.Count == 1)
 			{
-				titulo = titulo + BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[0])).Nombre + " has been added";
+				tituloEn = tituloEn + BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[0])).Nombre + " " + Herramientas.IdiomaBuscar.CogerCadena("en-US", "News.SubscriptionString1");
+				tituloEs = tituloEs + BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[0])).Nombre + " " + Herramientas.IdiomaBuscar.CogerCadena("es-ES", "News.SubscriptionString1");
 			}
 			else if (lista.Count == 2)
 			{
-				titulo = titulo + BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[0])).Nombre + " and " + 
-					BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[1])).Nombre + " has been added";
+				tituloEn = tituloEn + BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[0])).Nombre + " " + Herramientas.IdiomaBuscar.CogerCadena("en-US", "News.SubscriptionString2") + " " +
+					BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[1])).Nombre + " " + Herramientas.IdiomaBuscar.CogerCadena("en-US", "News.SubscriptionString3");
+				tituloEs = tituloEs + BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[0])).Nombre + " " + Herramientas.IdiomaBuscar.CogerCadena("es-ES", "News.SubscriptionString2") + " " +
+					BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[1])).Nombre + " " + Herramientas.IdiomaBuscar.CogerCadena("es-ES", "News.SubscriptionString3");
 			}
 			else if (lista.Count > 2)
 			{
-				titulo = titulo + BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[0])).Nombre + ", " +
-					BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[1])).Nombre + " and more games have been added";
+				tituloEn = tituloEn + BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[0])).Nombre + ", " +
+					BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[1])).Nombre + " " + Herramientas.IdiomaBuscar.CogerCadena("en-US", "News.SubscriptionString4");
+				tituloEs = tituloEs + BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[0])).Nombre + ", " +
+					BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(lista[1])).Nombre + " " + Herramientas.IdiomaBuscar.CogerCadena("es-ES", "News.SubscriptionString4");
 			}
 		}
 		else
 		{
-			titulo = null;
+			tituloEn = null;
+			tituloEs = null;
 		}
 	}
 
@@ -189,31 +209,38 @@
 
 		if (lista != null)
 		{
-			contenido = "The subscription service " + Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(suscripcionSeleccionada).Nombre + " ";
+			contenidoEn = Herramientas.IdiomaBuscar.CogerCadena("en-US", "News.SubscriptionString5") + " " + Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(suscripcionSeleccionada).Nombre + " ";
+			contenidoEs = Herramientas.IdiomaBuscar.CogerCadena("es-ES", "News.SubscriptionString5") + " " + Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(suscripcionSeleccionada).Nombre + " ";
 
 			if (lista.Count == 1)
 			{
-				contenido = contenido + "has added the following game:";
+				contenidoEn = contenidoEn + Herramientas.IdiomaBuscar.CogerCadena("en-US", "News.SubscriptionString6");
+				contenidoEs = contenidoEs + Herramientas.IdiomaBuscar.CogerCadena("es-ES", "News.SubscriptionString6");
 			}
 			else if (lista.Count > 1)
 			{
-				contenido = contenido + "has added the following games:";
+				contenidoEn = contenidoEn + Herramientas.IdiomaBuscar.CogerCadena("en-US", "News.SubscriptionString7");
+				contenidoEs = contenidoEs + Herramientas.IdiomaBuscar.CogerCadena("es-ES", "News.SubscriptionString7");
 			}
 
-			contenido = contenido + Environment.NewLine + "<ul>" + Environment.NewLine;
+			contenidoEn = contenidoEn + Environment.NewLine + "<ul>" + Environment.NewLine;
+			contenidoEs = contenidoEs + Environment.NewLine + "<ul>" + Environment.NewLine;
 
 			foreach (var juego in lista)
 			{
 				Juegos.JuegoSuscripcion suscripcion = BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(juego));
 
-				contenido = contenido + "<li><a href=" + Strings.ChrW(34) + Herramientas.EnlaceAcortador.Generar(suscripcion.Enlace, suscripcion.Suscripcion) + Strings.ChrW(34) + " target=" + Strings.ChrW(34) + "_blank" + Strings.ChrW(34) + ">" + suscripcion.Nombre + " (" + Juegos.JuegoDRM2.DevolverDRM(suscripcion.DRM) + ")</a></li>" + Environment.NewLine;
+				contenidoEn = contenidoEn + "<li><a href=" + Strings.ChrW(34) + Herramientas.EnlaceAcortador.Generar(suscripcion.Enlace, suscripcion.Suscripcion) + Strings.ChrW(34) + " target=" + Strings.ChrW(34) + "_blank" + Strings.ChrW(34) + ">" + suscripcion.Nombre + " (" + Juegos.JuegoDRM2.DevolverDRM(suscripcion.DRM) + ")</a></li>" + Environment.NewLine;
+				contenidoEs = contenidoEs + "<li><a href=" + Strings.ChrW(34) + Herramientas.EnlaceAcortador.Generar(suscripcion.Enlace, suscripcion.Suscripcion) + Strings.ChrW(34) + " target=" + Strings.ChrW(34) + "_blank" + Strings.ChrW(34) + ">" + suscripcion.Nombre + " (" + Juegos.JuegoDRM2.DevolverDRM(suscripcion.DRM) + ")</a></li>" + Environment.NewLine;
 			}
 
-			contenido = contenido + "</ul>";
+			contenidoEn = contenidoEn + "</ul>";
+			contenidoEs = contenidoEs + "</ul>";
 		}
 		else
 		{
-			contenido = null;
+			contenidoEn = null;
+			contenidoEs = null;
 		}
 	}
 
@@ -238,8 +265,10 @@
 		global::Noticias.Noticia noticia = new global::Noticias.Noticia();
 
 		noticia.Tipo = global::Noticias.NoticiaTipo.Suscripciones;
-		noticia.Titulo = titulo;
-		noticia.Contenido = contenido;
+		noticia.TituloEn = tituloEn;
+		noticia.TituloEs = tituloEs;
+		noticia.ContenidoEn = contenidoEn;
+		noticia.ContenidoEs = contenidoEs;
 		noticia.Juegos = juegos;		
 		noticia.FechaEmpieza = DateTime.Now;
 		noticia.FechaTermina = Convert.ToDateTime(fechaSeleccionada);
@@ -248,8 +277,11 @@
 		BaseDatos.Noticias.Insertar.Ejecutar(noticia);
 
 		suscripcionSeleccionada = null;
-		titulo = null;
-		contenido = null;
+		tituloEn = null;
+		tituloEs = null;
+		contenidoEn = null;
+		contenidoEs = null;
+		fechaSeleccionada = null;
 		juegos = null;
 	}
 
