--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -8,15 +8,13 @@
 @inject UserManager<Usuario> UserManager
 @inject IHttpContextAccessor HttpContextAccessor
 
-@Herramientas.IdiomaBuscar.CogerCadena(idioma, "test")
-
 <div style="display: flex; flex-direction: row; align-items: flex-start; justify-content: space-between;">
 	<div style="width: 50%; padding-right: 10px;">
 	
 		@if (juegosMinimosMostrar.Count > 0)
 		{
 			<div style="font-size: 20px; margin-bottom: 10px; margin-left: 20px;">
-				Last Historical Lows
+				@Herramientas.IdiomaBuscar.CogerCadena(idioma, "Index.LastLows")
 			</div>
 
 			<div class="perfil" style="padding: 15px 20px;">
@@ -45,8 +43,8 @@
 					</div>
 				}
 
-				<a class="boton-pequeño" style="padding: 10px 15px; margin-top: 20px; margin-bottom: 5px;" href="/HistoricalLow">
-					Load more historical lows
+				<a class="boton-pequeño" style="padding: 10px 15px; margin-top: 20px; margin-bottom: 5px;" href="/historicallow">
+					@Herramientas.IdiomaBuscar.CogerCadena(idioma, "Index.LastLowsMore")
 				</a>
 			</div>
 		}
@@ -56,7 +54,7 @@
 		@if (juegosAñadidosMostrar.Count > 0)
 		{
 			<div style="font-size: 20px; margin-bottom: 10px; margin-left: 20px;">
-				Last Added
+				@Herramientas.IdiomaBuscar.CogerCadena(idioma, "Index.LastAdded")
 			</div>
 
 			<div class="perfil" style="padding: 15px 20px;">
@@ -86,8 +84,8 @@
 					</div>
 				}
 
-				<a class="boton-pequeño" style="padding: 10px 15px; margin-top: 20px; margin-bottom: 5px;" href="/LastAdded">
-					Load more added games
+				<a class="boton-pequeño" style="padding: 10px 15px; margin-top: 20px; margin-bottom: 5px;" href="/lastadded">					
+					@Herramientas.IdiomaBuscar.CogerCadena(idioma, "Index.LastAddedMore")
 				</a>
 			</div>
 		}
@@ -98,7 +96,7 @@
 		@if (noticiasMostrar.Count > 0)
 		{
 			<div style="font-size: 20px; margin-bottom: 10px; margin-left: 20px;">
-				Last News
+				@Herramientas.IdiomaBuscar.CogerCadena(idioma, "Index.LastNews")
 			</div>
 
 			<div class="perfil" style="padding: 15px 20px;">
@@ -108,7 +106,21 @@
 						<a class="boton-pequeño" style="padding: 20px;" href="/news/@noticia.Id">
 							<div class="perfil-flexible-centrado">
 								<div style="width: 80%;">
-									@noticia.Titulo
+									@if (idioma != null)
+									{
+										@if (idioma == "es" || idioma == "es-ES")
+										{
+											@noticia.TituloEs
+										}
+										else
+										{
+											@noticia.TituloEn
+										}
+									}
+									else
+									{
+										@noticia.TituloEn
+									}													
 								</div>
 
 								<div style="width: 20%; text-align: right;">
@@ -118,6 +130,10 @@
 						</a>
 					</div>
 				}
+
+				<a class="boton-pequeño" style="padding: 15px 20px; margin-top: 20px; margin-bottom: 5px;" href="/lastnews">
+					@Herramientas.IdiomaBuscar.CogerCadena(idioma, "Index.LastNewsMore")
+				</a>
 			</div>
 		}
 	</div>
@@ -187,13 +203,22 @@
 		#region Noticias
 		List<Noticia> noticias = BaseDatos.Noticias.Buscar.Todas().OrderBy(x => x.FechaEmpieza).Reverse().ToList();
 
-		foreach (var noticia in noticias)
+		if (noticias.Count > 0)
 		{
-			if (DateTime.Now >= noticia.FechaEmpieza && DateTime.Now <= noticia.FechaTermina)
+			int i = 0;
+			foreach (var noticia in noticias)
 			{
-				noticiasMostrar.Add(noticia);
+				if (DateTime.Now >= noticia.FechaEmpieza && DateTime.Now <= noticia.FechaTermina)
+				{
+					if (i < 10)
+					{
+						noticiasMostrar.Add(noticia);
+					}
+					
+					i += 1;
+				}
 			}
-		}
+		}	
 		#endregion
 	}
 
